--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
       dockerfile: Dockerfile
     restart: always
     volumes: 
-      - /Users/blackhole/Documents/www:/var/www
-      - /Users/blackhole/Documents/www/log:/var/log/opd.activitys.actapi
+      - ~/Documents/www:/var/www
+      - ~/Documents/www/log:/var/log/opd.activitys.actapi
       - ./php71/php-fpm.conf:/usr/local/etc/php-fpm.conf
       - ./php71/php-fpm.d/www.conf:/usr/local/etc/php-fpm.d/www.conf
       - ./php71/logs:/usr/local/var/log
@@ -17,8 +17,8 @@ services:
       dockerfile: Dockerfile
     restart: always
     volumes: 
-      - /Users/blackhole/Documents/www:/var/www
-      - /Users/blackhole/Documents/www/log:/var/log/opd.activitys.actapi
+      - ~/Documents/www:/var/www
+      - ~/Documents/www/log:/var/log/opd.activitys.actapi
       - ./php73/php-fpm.conf:/usr/local/etc/php-fpm.conf
       - ./php73/php-fpm.d/www.conf:/usr/local/etc/php-fpm.d/www.conf
       - ./php73/logs:/usr/local/var/log
@@ -28,8 +28,8 @@ services:
       dockerfile: Dockerfile
     restart: always
     volumes: 
-      - /Users/blackhole/Documents/www:/var/www
-      - /Users/blackhole/Documents/www/log:/var/log/opd.activitys.actapi
+      - ~/Documents/www:/var/www
+      - ~/Documents/www/log:/var/log/opd.activitys.actapi
       - ./php74/php-fpm.conf:/usr/local/etc/php-fpm.conf
       - ./php74/php-fpm.d/www.conf:/usr/local/etc/php-fpm.d/www.conf
       - ./php74/logs:/usr/local/var/log
@@ -39,7 +39,7 @@ services:
       - "80:80"
     restart: always
     volumes: 
-      - /Users/blackhole/Documents/www:/var/www
+      - ~/Documents/www:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/logs:/var/log/nginx
