--- a/php73/Dockerfile
+++ b/php73/Dockerfile
@@ -11,4 +11,4 @@ RUN apt-get update && apt-get install -y \
 RUN pecl install redis-5.1.1 \
     && pecl install xdebug-2.8.1 \
     && docker-php-ext-enable redis xdebug
-RUN docker-php-ext-install bcmath
+RUN docker-php-ext-install bcmath pdo_mysql
