--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -10,4 +10,5 @@ RUN apt-get update && apt-get install -y \
 
 RUN pecl install redis-5.1.1 \
     && pecl install xdebug-2.8.1 \
-    && docker-php-ext-enable redis xdebug bcmath
+    && docker-php-ext-enable redis xdebug
+RUN docker-php-ext-install bcmath pdo_mysql
